--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -3,10 +3,16 @@
 #info\uFF1A\u663E\u793Ainfo\u3001error
 #error\uFF1A\u53EAerror
 log4j.rootLogger=debug,appender1
-#log4j.rootLogger=info,appender1
-#log4j.rootLogger=error,appender1
+log4j.rootLogger=info,appender1
+log4j.rootLogger=warn,appender1
+log4j.rootLogger=error,appender1
 
 #\u8F93\u51FA\u5230\u63A7\u5236\u53F0
 log4j.appender.appender1=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.appender1.File=log/stock-analyze
+log4j.appender.appender1.DatePattern='-'yyyy-MM-dd'.log'
+
 #\u6837\u5F0F\u4E3ATTCCLayout
-log4j.appender.appender1.layout=org.apache.log4j.TTCCLayout
+#log4j.appender.appender1.layout=org.apache.log4j.TTCCLayout
+log4j.appender.appender1.layout=org.apache.log4j.PatternLayout
+log4j.appender.appender1.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}-%m%n
